--- a/index.html
+++ b/index.html
@@ -42,7 +42,27 @@
     </section>
     
 
-    <section class="aboutMe" id="aboutMe"></section>
+    <section class="aboutMe" id="aboutMe">
+        <img src="assets/svg/AboutMe.svg" 
+        alt="AboutMe" 
+        class="aboutMeImg">
+
+        <div class="textContainer">
+            <div class="textTitle">
+                <h1 class="aboutName">About</h1>
+                <h1 class="aboutTitle">me</h1>
+                <img src="assets/svg/lightbulb.svg" alt="light">
+            </div>
+            <p class="aboutMePar">
+                Hey, I'm Sara Alyafey, a Software Engineer who loves
+                turning complex ideas into simple, sleek solutions.
+                Currently diving into mobile app development
+                to level up my skills. I enjoy building cool stuff, 
+                experimenting with new tech, and making things
+                look and feel great.
+            </p>
+        </div>
+    </section>
 </body>
 
 </html>   
