--- a/index.html
+++ b/index.html
@@ -63,6 +63,30 @@
             </p>
         </div>
     </section>
+
+
+    <section class="works" id="myWorks">
+        <div class="worksContainer">
+            <div class="projectTitle">
+                <h1 class="aboutName">My recent</h1>
+                <h1 class="aboutTitle">works</h1>
+            </div>
+            <ul>
+                <li><a href="">
+                    <img src="assets/imgs/landingPage.png" alt="landingPage"
+                    ></a>
+                </li>
+                <li><a href="">
+                    <img src="assets/imgs/webApp.png" alt="webApp"
+                    ></a>
+                </li>
+                <li><a href="">
+                    <img src="assets/imgs/app.png" alt="app"
+                    ></a>
+                </li>
+            </ul>
+        </div>
+    </section>
 </body>
 
 </html>   
