--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +25,7 @@
         </nav>
 
     </header>
-    <hr/>
+    <hr />
 
     <section class="hero">
         <img class="arrow" src="assets/svg/arrow.svg" alt="arrow">
@@ -33,19 +34,17 @@
             <h1 class="title">Software Engineer</h1>
             <div class="heroBtns">
                 <a class="hireMe" href="#contactMe">Hire me</a>
-                <a class="cv" href="assets\CV.pdf"download>Download CV
-                <img src="assets/svg/download.svg" alt="">
-            </a>
+                <a class="cv" href="assets\CV.pdf" download>Download CV
+                    <img src="assets/svg/download.svg" alt="">
+                </a>
             </div>
         </div>
         <img src="assets/svg/Hero.svg" alt="Hero image" class="heroImg">
     </section>
-    
+
 
     <section class="aboutMe" id="aboutMe">
-        <img src="assets/svg/AboutMe.svg" 
-        alt="AboutMe" 
-        class="aboutMeImg">
+        <img src="assets/svg/AboutMe.svg" alt="AboutMe" class="aboutMeImg">
 
         <div class="textContainer">
             <div class="textTitle">
@@ -57,7 +56,7 @@
                 Hey, I'm Sara Alyafey, a Software Engineer who loves
                 turning complex ideas into simple, sleek solutions.
                 Currently diving into mobile app development
-                to level up my skills. I enjoy building cool stuff, 
+                to level up my skills. I enjoy building cool stuff,
                 experimenting with new tech, and making things
                 look and feel great.
             </p>
@@ -73,32 +72,37 @@
             </div>
             <ul>
                 <li><a href="">
-                    <img src="assets/imgs/landingPage.png" alt="landingPage"
-                    ></a>
+                        <img src="assets/imgs/landingPage.png" alt="landingPage"></a>
                 </li>
                 <li><a href="">
-                    <img src="assets/imgs/webApp.png" alt="webApp"
-                    ></a>
+                        <img src="assets/imgs/webApp.png" alt="webApp"></a>
                 </li>
                 <li><a href="">
-                    <img src="assets/imgs/app.png" alt="app"
-                    ></a>
-                </li>
-                <li><a href="">
-                    <img src="assets/imgs/landingPage.png" alt="landingPage"
-                    ></a>
-                </li>
-                <li><a href="">
-                    <img src="assets/imgs/webApp.png" alt="webApp"
-                    ></a>
-                </li>
-                <li><a href="">
-                    <img src="assets/imgs/app.png" alt="app"
-                    ></a>
+                        <img src="assets/imgs/app.png" alt="app"></a>
                 </li>
             </ul>
         </div>
     </section>
+
+    <sectionc class="contentContainer" id="contactMe">
+        <div class="contentTitle">
+            <h1 class="aboutName">Content</h1>
+            <h1 class="aboutTitle">me</h1>
+        </div>
+
+        <div class="contact">
+            <div class="emailAndPhone">
+                <img src="assets/svg/Email.svg" alt="email logo" />
+                <a href="mailto:mkbusiness202@gmail.com">
+                    <h3>mkbusiness202@gmail.com</h3>
+                </a>
+            </div>
+            <div class="emailAndPhone">
+                <img src="assets/svg/phone.svg" alt="phone logo" />
+                <h3>+0123456789</h3>
+            </div>
+        </div>
+    </sectionc>
 </body>
 
-</html>   
+</html>
