--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
                 <h3>+0123456789</h3>
             </div>
         </div>
+        <div class="socialMedia">
+            <a href="https://www.linkedin.com/in/musaab-mohammed-kubbi-475911212/" target="_blank"><img
+                    src="assets/svg/linkedin.svg" alt="my linkedin account">
+                <a href="https://github.com/MusaabK99" target="_blank"><img src="assets/svg/github.svg"
+                        alt=" my github account" /></a>
+                <a href="https://x.com/MusaabK99" target="_blank"><img src="assets/svg/twitter.svg"
+                        alt="my x account" /></a>
+                <a href="https://www.youtube.com/@MusaabK99" target="_blank"><img src="assets/svg/youtube.svg"
+                        alt="my youtube channel" /></a>
+        </div>
     </sectionc>
 </body>
 
