--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         </div>
     </section>
 
-    <sectionc class="contentContainer" id="contactMe">
-        <div class="contentTitle">
-            <h1 class="aboutName">Content</h1>
+    <sectionc class="contactContainer" id="contactMe">
+        <div class="contacttTitle">
+            <h1 class="aboutName">Contact</h1>
             <h1 class="aboutTitle">me</h1>
         </div>
 
