--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                         alt="my youtube channel" /></a>
         </div>
     </sectionc>
+
+    <hr>
+    <footer>
+        <p>Built by Sara Alyafey.</p>
+    </footer>
 </body>
 
 </html>
