--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
 
     <section class="contactContainer" id="contactMe">
-        <div class="contacttTitle">
+        <div class="contactTitle">
             <h1 class="aboutName">Contact</h1>
             <h1 class="aboutTitle">me</h1>
         </div>
